[workspace]
members = ['common',
'year2015',
'year2016',
'year2017',
'year2018',
'year2019',
'year2020',
'year2021',
'year2022',
'year2023']

[package]
name = "advent_of_code"
version = "0.9.6"
edition = "2021"

[features]
verbose = []
err = []
default = ["verbose"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "common"}
year2015 = {path = "year2015"}
year2016 = {path = "year2016"}
year2017 = {path = "year2017"}
year2018 = {path = "year2018"}
year2019 = {path = "year2019"}
year2020 = {path = "year2020"}
year2021 = {path = "year2021"}
year2022 = {path = "year2022"}
year2023 = {path = "year2023"}

serde_json = { version = "1.0"}                     # 2015/12, 2022/13
clap = { version = "4.2", features = ["derive"] }   # arguments parser
