[package]
name = "common"
version = "1.0.0"
edition = "2021"

[features]
verbose = []
err = []
default = ["verbose"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rust-ini = "0.19"                                   # common::settings::ini
serde = { version = "1.0", features = ["derive"] }  # common::settings::json
serde_json = { version = "1.0"}                     # 2015/12, 2022/13
minreq = {version = "2.7.0", features = ["https"] } # common::network
thiserror = "1.0"
anyhow = "1.0"

rust-crypto = "0.2"                                 # common::md5Hasher

clap = { version = "4.4", features = ["derive"] }   # arguments parser
fancy-regex = "0.12"                                # backreferences
prse = "1.1"
