[package]
name = "common"
version = "1.0.0"
edition = "2024"

[features]
verbose = []
err = []
default = ["verbose"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rust-ini = "0.19"                                   # common::settings::ini
serde = { version = "1.0", features = ["derive"] }  # common::settings::json
serde_json = { version = "1.0"}                     # 2015/12, 2022/13
minreq = {version = "2.13", features = ["https"] } # common::network
thiserror = "2.0"
anyhow = "1.0"

rust-crypto = "0.2"                                 # common::md5Hasher

clap = { version = "4.5", features = ["derive"] }   # arguments parser
fancy-regex = "0.14"                                # backreferences
prse = "1.2"
