[package]
name = "year2015"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
itertools = "*"
prse = "*"
once_cell = "*"
serde_json = { version = "*"}
regex = "*"
fancy-regex = "*"