[package]
name = "year2015"
version = "1.25.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
itertools = "0.13"
prse = "1.1"
serde_json = { version = "1.0"}
regex = "1.10"
fancy-regex = "0.13"
anyhow = "1.0"