[package]
name = "year2015"
version = "1.25.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
itertools = "0.14"
prse = "1.2"
serde_json = { version = "1.0"}
regex = "1.11.1"
fancy-regex = "0.14.0"
anyhow = "1.0"