[package]
name = "year2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_common = {path = "../aoc_common"}
scan_fmt = "0.2"
once_cell = "*"
itertools = "0.10"
serde_json = { version = "1.0"}
regex = "1.8"
