[package]
name = "year2022"
version = "0.21.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
prse = "1.1"
once_cell = "1.19"
itertools = "0.12"
serde_json = { version = "1.0"}
regex = "1.10"
anyhow = "1.0"
