[package]
name = "year2022"
version = "0.21.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
prse = "1.2"
itertools = "0.14"
serde_json = { version = "1.0"}
regex = "1.11"
anyhow = "1.0"
